Add script for build & run umd-federation tests

--- a/package.json
+++ b/package.json
@@ -47,7 +47,8 @@
       "./vue3-demo/*",
       "./vue-cli/*",
       "./genesis/*",
-      "./typescript-monorepo/*"
+      "./typescript-monorepo/*",
+      "./umd-federation/*"
     ],
     "nohoist": [
       "**/@types",
