--- a/lerna.json
+++ b/lerna.json
@@ -39,6 +39,7 @@
     "./vue3-demo/*",
     "./vue-cli/*",
     "./genesis/*",
-    "./typescript-monorepo/*"
+    "./typescript-monorepo/*",
+    "./umd-federation/*"
   ]
 }
