--- a/umd-federation/package.json
+++ b/umd-federation/package.json
@@ -1,20 +1,18 @@
 {
-  "name": "umf-demo",
+  "name": "umd-federation",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "lerna run --parallel start"
+    "start": "lerna run --scope=umd-federation_app* --parallel start",
+    "e2e:ci": "yarn start & wait-on http-get://localhost:9001/ && npx cypress run --config-file ../cypress/config/cypress.config.ts --config '{\"supportFile\": \"../cypress/support/e2e.ts\"}' --spec \"./e2e/*.cy.ts\" --browser=chrome"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "workspaces": [
-    "app1",
-    "app2"
-  ],
   "devDependencies": {
-    "lerna": "^4.0.0"
+    "lerna": "^4.0.0",
+    "wait-on": "^7.0.1"
   }
 }
