Add script for build & run umd-federation tests (#2593)
Co-authored-by: Zack Jackson <zackary.l.jackson@gmail.com>

--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
       "./vue-cli/*",
       "./genesis/*",
       "./typescript-monorepo/*",
+      "./umd-federation/*",
       "./angular14-react",
       "./angular14-react/*"
     ],
