--- a/lerna.json
+++ b/lerna.json
@@ -41,6 +41,7 @@
     "./vue-cli/*",
     "./genesis/*",
     "./typescript-monorepo/*",
+    "./umd-federation/*",
     "./angular14-react",
     "./angular14-react/*"
   ]
