--- a/package.json
+++ b/package.json
@@ -12,7 +12,47 @@
   "workspaces": {
     "packages": [
       "./advanced-api/automatic-vendor-sharing",
-      "./advanced-api/automatic-vendor-sharing/*"
+      "./advanced-api/automatic-vendor-sharing/*",
+      "./basic-host-remote/*",
+      "./third-party-scripts/*",
+      "./bi-directional/*",
+      "./startup-code/*",
+      "./different-react-versions/*",
+      "./native-federation-react/*",
+      "./self-healing/*",
+      "./react-hmr/*",
+      "./comprehensive-demo-react16/*",
+      "./comprehensive-demo-react18/*",
+      "./css-isolation/*",
+      "./server-side-rendering/*",
+      "./server-side-render-only/*",
+      "./dynamic-system-host/*",
+      "./shared-context/*",
+      "./shared-routing/*",
+      "./shared-routes2/*",
+      "./shared-store-cross-framework/*",
+      "./typescript/*",
+      "./typescript-project-references/*",
+      "./nested/*",
+      "./nextjs-sidecar/*",
+      "./version-discrepancy/*",
+      "./dashboard-example/*",
+      "./react-in-vue/*",
+      "./redux-reducer-injection/*",
+      "./angular-universal-ssr/*",
+      "./advanced-api/dynamic-remotes/*",
+      "./advanced-api/dynamic-remotes-synchronous-imports/*",
+      "./advanced-api/dynamic-remotes-runtime-environment-variables/",
+      "./advanced-api/dynamic-remotes-runtime-environment-variables/*",
+      "./nextjs-bi-directional/*",
+      "./vue2-in-vue3/*",
+      "./vue3-demo/*",
+      "./vue-cli/*",
+      "./genesis/*",
+      "./typescript-monorepo/*",
+      "./umd-federation/*",
+      "./angular14-react",
+      "./angular14-react/*"
     ],
     "nohoist": [
       "**/@types",
@@ -24,7 +64,6 @@
     ]
   },
   "devDependencies": {
-    "@vue/compiler-sfc": "3.2.37",
     "concurrently": "7.3.0",
     "cross-spawn": "7.0.3",
     "cypress": "10",
@@ -32,7 +71,7 @@
     "cypress-wait-until": "1.7.2",
     "husky": "7.0.4",
     "jest": "26.6.3",
-    "lerna": "6.3.0",
+    "lerna": "6.4.0",
     "mocha": "10.1.0",
     "prettier": "2.7.1",
     "pretty-quick": "3.1.3",
