--- a/shared-routing/package.json
+++ b/shared-routing/package.json
@@ -4,7 +4,8 @@
     "start": "lerna run --scope @shared-routing/* --parallel start",
     "build": "lerna run --scope @shared-routing/* build",
     "serve": "lerna run --scope @shared-routing/* --parallel serve",
-    "clean": "lerna run --scope @shared-routing/* --parallel clean"
+    "clean": "lerna run --scope @shared-routing/* --parallel clean",
+    "e2e:ci": "yarn start & wait-on http-get://localhost:3000/ && npx cypress run --config-file ../cypress/config/cypress.config.ts --config '{\"supportFile\": \"../cypress/support/e2e.ts\"}' --spec \"./e2e/tests/runAll.cy.ts\" --browser=chrome"
   },
   "devDependencies": {
     "lerna": "3.22.1"
