ci(advanced-api/automatic-vendor-sharing sample):add(ci pipeline for e2e test + cache for e2e) (#2567)
* Add ci for automatic-vendor-sharing sample

* Add cache

* add artifacts

* Enhanced screenshots and video size

* Add pipe for create cache

* Refactoring

--- a/lerna.json
+++ b/lerna.json
@@ -3,6 +3,8 @@
   "npmClient": "yarn",
   "useWorkspaces": true,
   "packages": [
+    "./advanced-api/automatic-vendor-sharing",
+    "./advanced-api/automatic-vendor-sharing/*",
     "./basic-host-remote/*",
     "./third-party-scripts/*",
     "./bi-directional/*",
@@ -34,7 +36,6 @@
     "./advanced-api/dynamic-remotes-synchronous-imports/*",
     "./advanced-api/dynamic-remotes-runtime-environment-variables/",
     "./advanced-api/dynamic-remotes-runtime-environment-variables/*",
-    "./advanced-api/automatic-vendor-sharing/*",
     "./nextjs-bi-directional/*",
     "./vue2-in-vue3/*",
     "./vue3-demo/*",
