--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   "private": true,
   "workspaces": {
     "packages": [
+      "./advanced-api/automatic-vendor-sharing",
+      "./advanced-api/automatic-vendor-sharing/*",
       "./basic-host-remote/*",
       "./third-party-scripts/*",
       "./bi-directional/*",
@@ -42,7 +44,6 @@
       "./advanced-api/dynamic-remotes-synchronous-imports/*",
       "./advanced-api/dynamic-remotes-runtime-environment-variables/",
       "./advanced-api/dynamic-remotes-runtime-environment-variables/*",
-      "./advanced-api/automatic-vendor-sharing/*",
       "./nextjs-bi-directional/*",
       "./vue2-in-vue3/*",
       "./vue3-demo/*",
@@ -63,7 +64,6 @@
     ]
   },
   "devDependencies": {
-    "@vue/compiler-sfc": "3.2.37",
     "concurrently": "7.3.0",
     "cross-spawn": "7.0.3",
     "cypress": "10",
@@ -71,10 +71,11 @@
     "cypress-wait-until": "1.7.2",
     "husky": "7.0.4",
     "jest": "26.6.3",
-    "lerna": "^3.22.1",
-    "mocha": "^10.1.0",
+    "lerna": "6.4.0",
+    "mocha": "10.1.0",
     "prettier": "2.7.1",
-    "pretty-quick": "3.1.3"
+    "pretty-quick": "3.1.3",
+    "wait-on": "7.0.1"
   },
   "scripts": {
     "bootstrap": "lerna bootstrap --ignore-scripts",
