--- a/multi-build-system/vite-plugin-federation/vite-to-webpack/vite-remote/package.json
+++ b/multi-build-system/vite-plugin-federation/vite-to-webpack/vite-remote/package.json
@@ -10,6 +10,8 @@
     "start": "yarn build && yarn preview"
   },
   "dependencies": {
+    "@babel/preset-env": "^7.20.2",
+    "@babel/preset-react": "^7.18.6",
     "@rollup/plugin-commonjs": "^24.0.0",
     "@rollup/plugin-node-resolve": "^15.0.1",
     "react": "^18.2.0",
