--- a/advanced-api/dynamic-remotes-runtime-environment-variables/package.json
+++ b/advanced-api/dynamic-remotes-runtime-environment-variables/package.json
@@ -1,14 +1,13 @@
 {
-  "name": "@advanced-api/dynamic-remotes-runtime-environment-variables",
-  "private": true,
+  "name": "dynamic-remotes-runtime-environment-variables",
   "scripts": {
-    "start": "lerna run --scope @dynamic-remotes-runtime-environment-variables/* --parallel start",
-    "build": "lerna run --scope @dynamic-remotes-runtime-environment-variables/* build",
-    "serve": "lerna run --scope @dynamic-remotes-runtime-environment-variables/* --parallel serve",
-    "clean": "lerna run --scope @dynamic-remotes-runtime-environment-variables/* --parallel clean",
-    "docker:build": "lerna run --scope @dynamic-remotes-runtime-environment-variables/* --parallel docker:build",
-    "docker:run": "lerna run --scope @dynamic-remotes-runtime-environment-variables/* --parallel docker:run",
-    "docker:rm": "lerna run --scope @dynamic-remotes-runtime-environment-variables/* --parallel docker:rm",
+    "start": "lerna run --scope=dynamic-remotes-runtime-environment-variables_* --parallel start",
+    "build": "lerna run --scope=dynamic-remotes-runtime-environment-variables_* --parallel build",
+    "serve": "lerna run --scope=dynamic-remotes-runtime-environment-variables_* --parallel serve",
+    "clean": "lerna run --scope=dynamic-remotes-runtime-environment-variables_* --parallel clean",
+    "docker:build": "lerna run --scope=dynamic-remotes-runtime-environment-variables_* --parallel docker:build",
+    "docker:run": "lerna run --scope=dynamic-remotes-runtime-environment-variables_* --parallel docker:run",
+    "docker:rm": "lerna run --scope=dynamic-remotes-runtime-environment-variables_* --parallel docker:rm",
     "e2e:ci": "yarn start & wait-on http-get://localhost:3000/ && npx cypress run --config-file ../../cypress/config/cypress.config.ts --config '{\"supportFile\": \"../../cypress/support/e2e.ts\"}' --spec \"./e2e/*.cy.ts\" --browser=chrome"
   },
   "devDependencies": {
