--- a/advanced-api/dynamic-remotes-synchronous-imports/package.json
+++ b/advanced-api/dynamic-remotes-synchronous-imports/package.json
@@ -1,10 +1,10 @@
 {
-  "private": true,
+  "name": "dynamic-remotes-synchronous-imports",
   "scripts": {
-    "start": "lerna run --scope @dynamic-remotes-synchronous-imports/* --parallel start",
-    "build": "lerna run --scope @dynamic-remotes-synchronous-imports/* build",
-    "serve": "lerna run --scope @dynamic-remotes-synchronous-imports/* --parallel serve",
-    "clean": "lerna run --scope @dynamic-remotes-synchronous-imports/* --parallel clean",
+    "start": "lerna run --scope=dynamic-remotes-synchronous-imports_app* --parallel start",
+    "build": "lerna run --scope=dynamic-remotes-synchronous-imports_app* --parallel build",
+    "serve": "lerna run --scope=dynamic-remotes-synchronous-imports_app* --parallel serve",
+    "clean": "lerna run --scope=dynamic-remotes-synchronous-imports_app* --parallel clean",
     "e2e:ci": "yarn start & wait-on http-get://localhost:3001/ && npx cypress run --config-file ../../cypress/config/cypress.config.ts --config '{\"supportFile\": \"../../cypress/support/e2e.ts\"}' --spec \"./e2e/*.cy.ts\" --browser=chrome"
   },
   "devDependencies": {
