--- a/lerna.json
+++ b/lerna.json
@@ -3,6 +3,7 @@
   "npmClient": "yarn",
   "useWorkspaces": true,
   "packages": [
+    "./advanced-api/automatic-vendor-sharing",
     "./advanced-api/automatic-vendor-sharing/*",
     "./advanced-api/dynamic-remotes",
     "./advanced-api/dynamic-remotes/*",
