--- a/package.json
+++ b/package.json
@@ -12,21 +12,7 @@
   "workspaces": {
     "packages": [
       "./advanced-api/automatic-vendor-sharing",
-      "./advanced-api/automatic-vendor-sharing/*",
-      "./advanced-api/dynamic-remotes",
-      "./advanced-api/dynamic-remotes/*",
-      "./advanced-api/dynamic-remotes-synchronous-imports",
-      "./advanced-api/dynamic-remotes-synchronous-imports/*",
-      "./advanced-api/dynamic-remotes-runtime-environment-variables",
-      "./advanced-api/dynamic-remotes-runtime-environment-variables/*",
-      "./angular-universal-ssr",
-      "./angular-universal-ssr/*",
-      "./angular14-react",
-      "./angular14-react/*",
-      "./basic-host-remote",
-      "./basic-host-remote/*",
-      "./bi-directional",
-      "./bi-directional/*"
+      "./advanced-api/automatic-vendor-sharing/*"
     ],
     "nohoist": [
       "**/@types",
