--- a/angular14-react/angular-profile/package.json
+++ b/angular14-react/angular-profile/package.json
@@ -11,7 +11,8 @@
   "private": true,
   "resolutions": {
     "webpack": "^5.74.0",
-    "@types/react": "^18.2.0"
+    "@types/react": "18.0.26",
+    "@types/react-dom": "18.0.10"
   },
   "dependencies": {
     "@angular-builders/custom-webpack": "^14.0.1",
@@ -38,8 +39,8 @@
     "@angular/compiler-cli": "^14.2.0",
     "@ngxs/devtools-plugin": "^3.7.5",
     "@types/jasmine": "~4.0.0",
-    "@types/react": "^18.2.0",
-    "@types/react-dom": "^18.2.0",
+    "@types/react": "18.0.26",
+    "@types/react-dom": "18.0.10",
     "jasmine-core": "~4.3.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.1.0",
