--- a/angular14-react/package.json
+++ b/angular14-react/package.json
@@ -5,7 +5,7 @@
   "license": "MIT",
   "scripts": {
     "start": "lerna run --scope=angular14-react_* --parallel start",
-    "e2e:ci": "yarn start & wait-on http-get://localhost:4200/ && ng serve mdmf-profile & wait-on http-get://localhost:4201/ && npx cypress run --config-file ../cypress/config/cypress.config.ts --config '{\"supportFile\": \"../cypress/support/e2e.ts\"}' --spec \"./e2e/*.cy.ts\" --browser=chrome"
+    "e2e:ci": "yarn start & wait-on http-get://localhost:4201/ && npx cypress run --config-file ../cypress/config/cypress.config.ts --config '{\"supportFile\": \"../cypress/support/e2e.ts\"}' --spec \"./e2e/*.cy.ts\" --browser=chrome"
   },
   "devDependencies": {
     "lerna": "3.22.1",
