update node mf plugin

--- a/server-side-rendering/package.json
+++ b/server-side-rendering/package.json
@@ -11,6 +11,7 @@
     "shell"
   ],
   "scripts": {
-    "build": "yarn workspaces run build"
+    "build": "yarn workspaces run build",
+    "serve": "yarn workspaces run serve"
   }
 }
