--- a/bi-directional/package.json
+++ b/bi-directional/package.json
@@ -1,17 +1,11 @@
 {
-  "private": true,
+  "name": "bi-directional",
   "scripts": {
     "start": "yarn build && yarn serve",
     "build": "concurrently \"cd app1; yarn build\" \"cd app2; yarn build\"",
     "serve": "concurrently \"cd app1; yarn serve\" \"cd app2; yarn serve\"",
     "clean": "concurrently \"cd app1; yarn clean\" \"cd app2; yarn clean\"",
     "e2e:ci": "yarn start & wait-on http-get://localhost:3001/ && npx cypress run --config-file ../cypress/config/cypress.config.ts --config '{\"supportFile\": \"../cypress/support/e2e.ts\"}' --spec \"./e2e/*.cy.ts\" --browser=chrome"
-  },
-  "workspaces": {
-    "packages": [
-      "./app1",
-      "./app2"
-    ]
   },
   "devDependencies": {
     "concurrently": "7.6.0",
