--- a/comprehensive-demo-react18/app-05/package.json
+++ b/comprehensive-demo-react18/app-05/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@comprehensive-demo-react18/app-05",
+  "name": "comprehensive-demo-react18_app-05",
   "version": "1.0.0",
   "description": "boilerplate LitElement setup with TypeScript",
   "private": true,
