--- a/package.json
+++ b/package.json
@@ -13,6 +13,15 @@
     "packages": [
       "./advanced-api/automatic-vendor-sharing",
       "./advanced-api/automatic-vendor-sharing/*",
+      "./advanced-api/dynamic-remotes",
+      "./advanced-api/dynamic-remotes/*",
+      "./advanced-api/dynamic-remotes-runtime-environment-variables/",
+      "./advanced-api/dynamic-remotes-runtime-environment-variables/*",
+      "./advanced-api/dynamic-remotes-synchronous-imports",
+      "./advanced-api/dynamic-remotes-synchronous-imports/*",
+      "./angular-universal-ssr",
+      "./angular-universal-ssr/*",
+
       "./basic-host-remote/*",
       "./third-party-scripts/*",
       "./bi-directional/*",
@@ -20,7 +29,6 @@
       "./different-react-versions/*",
       "./native-federation-react/*",
       "./self-healing/*",
-      "./react-hmr/*",
       "./comprehensive-demo-react16/*",
       "./comprehensive-demo-react18/*",
       "./css-isolation/*",
@@ -39,11 +47,6 @@
       "./dashboard-example/*",
       "./react-in-vue/*",
       "./redux-reducer-injection/*",
-      "./angular-universal-ssr/*",
-      "./advanced-api/dynamic-remotes/*",
-      "./advanced-api/dynamic-remotes-synchronous-imports/*",
-      "./advanced-api/dynamic-remotes-runtime-environment-variables/",
-      "./advanced-api/dynamic-remotes-runtime-environment-variables/*",
       "./nextjs-bi-directional/*",
       "./vue2-in-vue3/*",
       "./vue3-demo/*",
