--- a/angular12-microfrontends/package.json
+++ b/angular12-microfrontends/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "ng-microfrontends",
+  "name": "angular12-microfrontends",
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
@@ -12,7 +12,6 @@
     "e2e": "ng e2e",
     "e2e:ci": "ng serve mdmf-shell & wait-on http-get://localhost:4200/ && ng serve mdmf-profile & wait-on http-get://localhost:4201/ && npx cypress run --config-file ../cypress/config/cypress.config.ts --config '{\"supportFile\": \"../cypress/support/e2e.ts\"}' --spec \"./e2e/*.cy.ts\" --browser=chrome"
   },
-  "private": true,
   "dependencies": {
     "@angular/animations": "12.2.16",
     "@angular/common": "12.2.16",
