--- a/complete-react-case/package.json
+++ b/complete-react-case/package.json
@@ -1,16 +1,6 @@
 {
-  "name": "react-webpack-mf",
+  "name": "complete-react-case",
   "version": "1.0.0",
-  "description": "A Webpack Module Federation Case In React  ·",
-  "main": "index.js",
-  "private": true,
-  "workspaces": {
-    "packages": [
-      "lib-app",
-      "component-app",
-      "main-app"
-    ]
-  },
   "scripts": {
     "start": "concurrently 'cd ./component-app && yarn start' 'cd ./lib-app && yarn start' 'cd ./main-app && yarn start'",
     "e2e:ci": "yarn start & wait-on http-get://localhost:3002/ && npx cypress run --config-file ../cypress/config/cypress.config.ts --config '{\"supportFile\": \"../cypress/support/e2e.ts\"}' --spec \"./e2e/*.cy.ts\" --browser=chrome"
