--- a/comprehensive-demo-react16/app-01/package.json
+++ b/comprehensive-demo-react16/app-01/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@comprehensive-demo-react16/app-01",
+  "name": "comprehensive-demo-react16_app-01",
   "version": "0.0.0",
   "private": true,
   "dependencies": {
