--- a/comprehensive-demo-react18/app-03/package.json
+++ b/comprehensive-demo-react18/app-03/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@comprehensive-demo-react18/app-03",
+  "name": "comprehensive-demo-react18_app-03",
   "version": "0.0.0",
   "private": true,
   "dependencies": {
