--- a/comprehensive-demo-react18/app-04/package.json
+++ b/comprehensive-demo-react18/app-04/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@comprehensive-demo-react18/app-04",
+  "name": "comprehensive-demo-react18_app-04",
   "version": "1.0.0",
   "private": true,
   "devDependencies": {
