--- a/react-hmr/host/package.json
+++ b/react-hmr/host/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "host",
+  "name": "react-hmr_host",
   "version": "1.0.0",
   "description": "host application",
   "main": "index.js",
