configure package.json's and lerna to run automated tests on ci

--- a/angular11-microfrontends-ngrx/package.json
+++ b/angular11-microfrontends-ngrx/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "ng-microfrontends",
+  "name": "angular11-microfrontends-ngrx",
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
@@ -13,7 +13,6 @@
     "e2e": "ng e2e mdmf-profile & ng e2e mdmf-shell",
     "e2e:ci": "yarn build:shared && yarn start:shell & wait-on http-get://localhost:4200/ && yarn start:profile & wait-on http-get://localhost:4201/ && npx cypress run --config-file ../cypress/config/cypress.config.ts --config '{\"supportFile\": \"../cypress/support/e2e.ts\"}' --spec \"./e2e/*.cy.ts\" --browser=chrome"
   },
-  "private": true,
   "resolutions": {
     "webpack": "5.72.1"
   },
