--- a/package.json
+++ b/package.json
@@ -13,6 +13,24 @@
     "packages": [
       "./advanced-api/automatic-vendor-sharing",
       "./advanced-api/automatic-vendor-sharing/*",
+      "./advanced-api/dynamic-remotes",
+      "./advanced-api/dynamic-remotes/*",
+      "./advanced-api/dynamic-remotes-runtime-environment-variables/",
+      "./advanced-api/dynamic-remotes-runtime-environment-variables/*",
+      "./advanced-api/dynamic-remotes-synchronous-imports",
+      "./advanced-api/dynamic-remotes-synchronous-imports/*",
+      "./angular-universal-ssr",
+      "./angular-universal-ssr/*",
+      "./angular11-microfrontends-ngrx",
+      "./angular11-microfrontends-ngxs",
+      "./angular11-microfrontends-scully",
+      "./angular12-microfrontends",
+      "./angular14-react",
+      "./angular14-react/*",
+      "./angular15-microfrontends-lazy-components",
+
+
+
       "./basic-host-remote/*",
       "./third-party-scripts/*",
       "./bi-directional/*",
@@ -39,20 +57,13 @@
       "./dashboard-example/*",
       "./react-in-vue/*",
       "./redux-reducer-injection/*",
-      "./angular-universal-ssr/*",
-      "./advanced-api/dynamic-remotes/*",
-      "./advanced-api/dynamic-remotes-synchronous-imports/*",
-      "./advanced-api/dynamic-remotes-runtime-environment-variables/",
-      "./advanced-api/dynamic-remotes-runtime-environment-variables/*",
       "./nextjs-bi-directional/*",
       "./vue2-in-vue3/*",
       "./vue3-demo/*",
       "./vue-cli/*",
       "./genesis/*",
       "./typescript-monorepo/*",
-      "./umd-federation/*",
-      "./angular14-react",
-      "./angular14-react/*"
+      "./umd-federation/*"
     ],
     "nohoist": [
       "**/@types",
