--- a/server-side-rendering/package.json
+++ b/server-side-rendering/package.json
@@ -11,6 +11,10 @@
     "shell"
   ],
   "scripts": {
-    "build": "yarn workspaces run build"
+    "build": "yarn workspaces run build",
+    "serve": "concurrently \"cd shell; yarn serve\" \"cd remote1; yarn serve\"  \"cd remote2; yarn serve\""
+  },
+  "devDependencies": {
+    "concurrently": "^6.2.2"
   }
 }
