fix-read-methods

--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
       "./startup-code/*",
       "./different-react-versions/*",
       "./native-federation-react/*",
+      "./self-healing",
       "./self-healing/*",
       "./react-hmr/*",
       "./comprehensive-demo-react16/*",
@@ -49,7 +50,6 @@
       "./vue3-demo/*",
       "./vue-cli/*",
       "./genesis/*",
-      "./typescript-monorepo/*",
       "./umd-federation/*",
       "./angular14-react",
       "./angular14-react/*"
