--- a/self-healing/package.json
+++ b/self-healing/package.json
@@ -1,5 +1,5 @@
 {
-  "private": true,
+  "name": "self-healing",
   "scripts": {
     "start": "lerna run --scope=self-healing_app* --parallel start",
     "build": "lerna run --scope=self-healing_app* build",
