--- a/typescript-monorepo/package.json
+++ b/typescript-monorepo/package.json
@@ -1,18 +1,14 @@
 {
-  "private": true,
+  "name": "typescript-monorepo",
   "scripts": {
-    "start": "lerna run --scope @typescript-monorepo/* --parallel start",
-    "build": "lerna run --scope @typescript-monorepo/* build",
-    "serve": "lerna run --scope @typescript-monorepo/* --parallel serve",
-    "clean": "lerna run --scope @typescript-monorepo/* --parallel clean",
+    "start": "lerna run --scope=typescript-monorepo_app* --parallel start",
+    "build": "lerna run --scope=typescript-monorepo_app* build",
+    "serve": "lerna run --scope=typescript-monorepo_app* --parallel serve",
+    "clean": "lerna run --scope=typescript-monorepo_app* --parallel clean",
     "e2e:ci": "yarn start & wait-on http-get://localhost:3001/ && npx cypress run --config-file ../cypress/config/cypress.config.ts --config '{\"supportFile\": \"../cypress/support/e2e.ts\"}' --spec \"./e2e/tests/runAll.cy.ts\" --browser=chrome"
   },
   "devDependencies": {
     "lerna": "3.22.1",
     "wait-on": "7.0.1"
-  },
-  "workspaces": [
-    "app1/*",
-    "app2/*"
-  ]
+  }
 }
