--- a/react-nextjs/nextjs-host-react-remote/host/package.json
+++ b/react-nextjs/nextjs-host-react-remote/host/package.json
@@ -9,7 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@module-federation/nextjs-mf": "^3.5.0",
+    "@module-federation/nextjs-mf": "6.0.4",
+    "next-transpile-modules": "9.1.0",
     "next": "12.2.2",
     "react": "18.1.0",
     "react-dom": "18.1.0"
