refactor: configure package.json's and lerna to run automated tests on ci part 2

--- a/rust-wasm/host/package.json
+++ b/rust-wasm/host/package.json
@@ -1,5 +1,6 @@
 {
-  "name": "host",
+  "name": "rust-wasm_host",
+  "private": true,
   "version": "1.0.0",
   "main": "src/index.js",
   "license": "MIT",
