--- a/rust-wasm/remote/package.json
+++ b/rust-wasm/remote/package.json
@@ -1,5 +1,6 @@
 {
-  "name": "remote",
+  "name": "rust-wasm_remote",
+  "private": true,
   "version": "0.1.0",
   "scripts": {
     "start": "webpack serve --mode=development",
