--- a/.github/workflows/on-push.yml
+++ b/.github/workflows/on-push.yml
@@ -27,6 +27,12 @@ jobs:
           ref: ${{ github.event.pull_request.head.ref }}
           fetch-depth: 0
 
+      # Hash yarn.lock files to use it as a cache key, if yarn.lock files are changed, the cache will be invalidated
+      - name: Check Yarn hash
+        run: |
+          npx hash-files -f '["**/yarn.lock"]' -a sha256 > YarnHash.txt
+          echo "Yarn cash is >> $(cat YarnHash.txt)"
+
       - name: Cache Yarn and Cypress
         uses: actions/cache@v3
         id: yarn-cache
@@ -36,7 +42,7 @@ jobs:
             **/yarn.lock
             ~/.cache/Cypress
             ~/.cache/yarn/v6  
-          key: e2e-cache-${{ hashFiles('**/yarn.lock') }}
+          key: e2e-cache-${{ hashFiles('YarnHash.txt') }}
           restore-keys: |
             e2e-cache-
             e2e-
@@ -45,4 +51,5 @@ jobs:
         if: steps.yarn-cache.outputs.cache-hit != 'true'
         run: |
           echo "CACHE CHANGED"
-          npx -y lerna bootstrap --ci --include-dependencies
+          yarn install
+          npx lerna exec --stream --concurrency=1 "yarn install"
