--- a/shared-context/package.json
+++ b/shared-context/package.json
@@ -1,10 +1,10 @@
 {
-  "private": true,
+  "name": "shared-context",
   "scripts": {
-    "start": "lerna run --scope @shared-context/* --parallel start",
-    "build": "lerna run --scope @shared-context/* build",
-    "serve": "lerna run --scope @shared-context/* --parallel serve",
-    "clean": "lerna run --scope @shared-context/* --parallel clean",
+    "start": "lerna run --scope=shared-context_* --parallel start",
+    "build": "lerna run --scope=shared-context_* build",
+    "serve": "lerna run --scope=shared-context_* --parallel serve",
+    "clean": "lerna run --scope=shared-context_* --parallel clean",
     "e2e:ci": "yarn start & wait-on http-get://localhost:3001/ && npx cypress run --config-file ../cypress/config/cypress.config.ts --config '{\"supportFile\": \"../cypress/support/e2e.ts\"}' --spec \"./e2e/*.cy.ts\" --browser=chrome"
   },
   "devDependencies": {
