refactor: root package.json for automated samples

--- a/package.json
+++ b/package.json
@@ -22,40 +22,62 @@
       "./angular-universal-ssr",
       "./angular-universal-ssr/*",
 
+      "./angular12-microfrontends",
+      "./angular14-react",
+      "./angular14-react/*",
+      "./angular15-microfrontends-lazy-components",
+      "./basic-host-remote",
       "./basic-host-remote/*",
-      "./third-party-scripts/*",
+      "./bi-directional",
       "./bi-directional/*",
-      "./startup-code/*",
+      "./complete-react-case",
+      "./complete-react-case/*",
+      "./comprehensive-demo-react16",
+      "./comprehensive-demo-react16/*",
+      "./comprehensive-demo-react18",
+      "./comprehensive-demo-react18/*",
+
+      "./css-isolation",
+      "./css-isolation/*",
+      "./different-react-versions",
       "./different-react-versions/*",
+      "./different-react-versions-isolated",
+      "./different-react-versions-isolated/*",
+      "./dynamic-system-host",
+      "./dynamic-system-host/*",
+      "./native-federation-react/*",
+      "./nested",
+      "./nested/*",
+      "./nextjs-react",
+      "./nextjs-react/*",
+      "./react-hmr",
+      "./react-hmr/*",
+      "./react-in-vue",
+      "./react-in-vue/*",
+
+      "./third-party-scripts/*",
+      "./startup-code/*",
       "./native-federation-react/*",
       "./self-healing",
       "./self-healing/*",
-      "./comprehensive-demo-react16/*",
-      "./comprehensive-demo-react18/*",
-      "./css-isolation/*",
       "./server-side-rendering/*",
       "./server-side-render-only/*",
-      "./dynamic-system-host/*",
       "./shared-context/*",
       "./shared-routing/*",
       "./shared-routes2/*",
       "./shared-store-cross-framework/*",
       "./typescript/*",
       "./typescript-project-references/*",
-      "./nested/*",
       "./nextjs-sidecar/*",
       "./version-discrepancy/*",
       "./dashboard-example/*",
-      "./react-in-vue/*",
       "./redux-reducer-injection/*",
       "./nextjs-bi-directional/*",
       "./vue2-in-vue3/*",
       "./vue3-demo/*",
       "./vue-cli/*",
       "./genesis/*",
-      "./umd-federation/*",
-      "./angular14-react",
-      "./angular14-react/*"
+      "./umd-federation/*"
     ],
     "nohoist": [
       "**/@types",
