fix: changed cd to yarn -cwd

--- a/rollup-federation-demo/package.json
+++ b/rollup-federation-demo/package.json
@@ -2,10 +2,10 @@
   "private": true,
   "scripts": {
     "install:deps": "yarn install && yarn install:rollup && yarn install:rollup-rs && yarn install:webpack",
-    "install:rollup": "cd ./rollup-spa && yarn install",
-    "install:rollup-rs": "cd ./rollup-spa/rs-sidecar && yarn install",
-    "install:webpack": "cd ./webpack-spa && yarn install",
-    "start": "concurrently 'cd rollup-spa; yarn start' 'cd rollup-spa/rs-sidecar; yarn start;' 'cd webpack-spa; yarn start'"
+    "install:rollup": "yarn --cwd rollup-spa install",
+    "install:rollup-rs": "yarn --cwd rollup-spa/rs-sidecar install",
+    "install:webpack": "yarn --cwd webpack-spa install",
+    "start": "concurrently 'yarn --cwd rollup-spa start' 'yarn --cwd rollup-spa/rs-sidecar start;' 'yarn --cwd webpack-spa start'"
   },
   "devDependencies": {
     "concurrently": "7.3.0"
