--- a/package.json
+++ b/package.json
@@ -56,8 +56,6 @@
       "./react-nextjs/react-host-remote/*",
       "./redux-reducer-injection",
       "./redux-reducer-injection/*",
-      "./rust-wasm",
-      "./rust-wasm/*",
       "./self-healing",
       "./self-healing/*",
       "./server-side-render-only",
@@ -79,6 +77,7 @@
       "./nextjs-sidecar/*",
       "./version-discrepancy/*",
       "./dashboard-example/*",
+      "./vue2-in-vue3/*",
       "./nextjs-bi-directional/*",
       "./vue3-demo/*",
       "./vue-cli/*",
