e2e(add automated test to ci part 2) (#2653)
* refactor: configure package.json's and lerna to run automated tests on ci part 2

* fix: falling tests on ci

--- a/package.json
+++ b/package.json
@@ -21,41 +21,68 @@
       "./advanced-api/dynamic-remotes-synchronous-imports/*",
       "./angular-universal-ssr",
       "./angular-universal-ssr/*",
-
+      "./angular12-microfrontends",
+      "./angular14-react",
+      "./angular14-react/*",
+      "./angular15-microfrontends-lazy-components",
+      "./basic-host-remote",
       "./basic-host-remote/*",
-      "./third-party-scripts/*",
+      "./bi-directional",
       "./bi-directional/*",
-      "./startup-code/*",
+      "./complete-react-case",
+      "./complete-react-case/*",
+      "./comprehensive-demo-react16",
+      "./comprehensive-demo-react16/*",
+      "./comprehensive-demo-react18",
+      "./comprehensive-demo-react18/*",
+      "./css-isolation",
+      "./css-isolation/*",
+      "./different-react-versions",
       "./different-react-versions/*",
+      "./different-react-versions-isolated",
+      "./different-react-versions-isolated/*",
+      "./dynamic-system-host",
+      "./dynamic-system-host/*",
       "./native-federation-react/*",
+      "./nested",
+      "./nested/*",
+      "./nextjs-react",
+      "./nextjs-react/*",
+      "./react-hmr",
+      "./react-hmr/*",
+      "./react-in-vue",
+      "./react-in-vue/*",
+      "./react-nextjs/react-host-remote",
+      "./react-nextjs/react-host-remote/*",
+      "./redux-reducer-injection",
+      "./redux-reducer-injection/*",
       "./self-healing",
       "./self-healing/*",
-      "./comprehensive-demo-react16/*",
-      "./comprehensive-demo-react18/*",
-      "./css-isolation/*",
+      "./server-side-render-only",
+      "./server-side-rendering",
       "./server-side-rendering/*",
-      "./server-side-render-only/*",
-      "./dynamic-system-host/*",
+      "./shared-context",
       "./shared-context/*",
-      "./shared-routing/*",
+      "./shared-routes2",
       "./shared-routes2/*",
+      "./shared-routing",
+      "./shared-routing/*",
+      "./shared-store-cross-framework",
       "./shared-store-cross-framework/*",
+      "./startup-code",
+      "./startup-code/*",
+      "./third-party-scripts/*",
       "./typescript/*",
       "./typescript-project-references/*",
-      "./nested/*",
       "./nextjs-sidecar/*",
       "./version-discrepancy/*",
       "./dashboard-example/*",
-      "./react-in-vue/*",
-      "./redux-reducer-injection/*",
-      "./nextjs-bi-directional/*",
       "./vue2-in-vue3/*",
+      "./nextjs-bi-directional/*",
       "./vue3-demo/*",
       "./vue-cli/*",
       "./genesis/*",
-      "./umd-federation/*",
-      "./angular14-react",
-      "./angular14-react/*"
+      "./umd-federation/*"
     ],
     "nohoist": [
       "**/@types",
@@ -72,6 +99,7 @@
     "cypress": "10",
     "cypress-fill-command": "^1.0.2",
     "cypress-wait-until": "1.7.2",
+    "hash-files": "1.1.1",
     "husky": "7.0.4",
     "jest": "26.6.3",
     "lerna": "6.4.1",
