--- a/package.json
+++ b/package.json
@@ -71,15 +71,27 @@
       "./shared-store-cross-framework/*",
       "./startup-code",
       "./startup-code/*",
+      "./typescript-project-references",
+      "./typescript-project-references/*",
+      "./version-discrepancy",
+      "./version-discrepancy/*",
+      "./vite-react-microfrontends",
+      "./vite-react-microfrontends/*",
+      "./vite-svelte-microfrontends",
+      "./vite-svelte-microfrontends/*",
+      "./vue2-in-vue3",
+      "./vue2-in-vue3/*",
+      "./vue3-demo-federation-with-vite",
+      "./vue3-demo-federation-with-vite/*",
+      "./vue3-demo",
+      "./vue3-demo/*",
+
+
       "./third-party-scripts/*",
       "./typescript/*",
-      "./typescript-project-references/*",
       "./nextjs-sidecar/*",
-      "./version-discrepancy/*",
       "./dashboard-example/*",
-      "./vue2-in-vue3/*",
       "./nextjs-bi-directional/*",
-      "./vue3-demo/*",
       "./vue-cli/*",
       "./genesis/*",
       "./umd-federation/*"
