--- a/version-discrepancy/package.json
+++ b/version-discrepancy/package.json
@@ -1,10 +1,10 @@
 {
-  "private": true,
+  "name": "version-discrepancy",
   "scripts": {
-    "start": "lerna run --scope @version-discrepancy/* --parallel start",
-    "build": "lerna run --scope @version-discrepancy/* build",
-    "serve": "lerna run --scope @version-discrepancy/* --parallel serve",
-    "clean": "lerna run --scope @version-discrepancy/* --parallel clean",
+    "start": "lerna run --scope=version-discrepancy_app* --parallel start",
+    "build": "lerna run --scope=version-discrepancy_app* build",
+    "serve": "lerna run --scope=version-discrepancy_app* --parallel serve",
+    "clean": "lerna run --scope=version-discrepancy_app* --parallel clean",
     "e2e:ci": "yarn start & wait-on http-get://localhost:3001/ && npx cypress run --config-file ../cypress/config/cypress.config.ts --config '{\"supportFile\": \"../cypress/support/e2e.ts\"}' --spec \"./e2e/tests/*.cy.ts\" --browser=chrome"
   },
   "devDependencies": {
