--- a/multi-build-system/vite-plugin-federation/rollup-to-wbpack/webpack-host/package.json
+++ b/multi-build-system/vite-plugin-federation/rollup-to-wbpack/webpack-host/package.json
@@ -1,18 +1,17 @@
 {
-  "name": "nav",
+  "name": "@rollup-to-webpack/webpack-host",
   "version": "1.0.0",
-  "type": "module",
   "scripts": {
     "build": "webpack --mode production",
     "build:dev": "webpack --mode development",
-    "build:start": "cd dist && PORT=3003 npx serve",
+    "build:start": "cd dist && PORT=3002 npx serve",
     "start": "webpack serve --open --mode development",
     "start:live": "webpack serve --open --mode development --live-reload --hot"
   },
   "license": "MIT",
   "author": {
-    "name": "",
-    "email": ""
+    "name": "Jack Herrington",
+    "email": "jherr@pobox.com"
   },
   "devDependencies": {
     "@babel/core": "^7.15.8",
@@ -33,7 +32,7 @@
   },
   "dependencies": {
     "@babel/runtime": "^7.13.10",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2"
   }
 }
