--- a/multi-build-system/vite-plugin-federation/vite-to-webpack/vite-remote/package.json
+++ b/multi-build-system/vite-plugin-federation/vite-to-webpack/vite-remote/package.json
@@ -1,28 +1,25 @@
 {
-  "name": "shared",
-  "private": true,
-  "version": "0.0.0",
-  "type": "module",
-  "scripts": {
-    "dev": "vite",
-    "build": "vite build",
-    "preview": "vite preview",
-    "start": "yarn build && yarn preview"
-  },
-  "dependencies": {
-    "@babel/preset-env": "^7.20.2",
-    "@babel/preset-react": "^7.18.6",
-    "@rollup/plugin-commonjs": "^24.0.0",
-    "@rollup/plugin-node-resolve": "^15.0.1",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "rollup-plugin-babel": "^4.4.0"
-  },
-  "devDependencies": {
-    "@originjs/vite-plugin-federation": "^1.1.13",
-    "@types/react": "^18.0.17",
-    "@types/react-dom": "^18.0.6",
-    "@vitejs/plugin-react": "^3.0.0",
-    "vite": "^4.0.3"
-  }
+	"name": "remote",
+	"private": true,
+	"version": "0.0.0",
+	"type": "module",
+	"scripts": {
+		"dev": "vite --port 5001",
+		"build": "tsc && vite build",
+		"preview": "yarn build && vite preview --port 5001"
+	},
+	"dependencies": {
+		"react": "^18.2.0",
+		"react-dom": "^18.2.0"
+	},
+	"devDependencies": {
+		"@originjs/vite-plugin-federation": "^1.1.13",
+		"@softarc/native-federation": "^1.1.0",
+		"@softarc/native-federation-esbuild": "^1.1.0",
+		"@types/react": "^18.0.26",
+		"@types/react-dom": "^18.0.10",
+		"@vitejs/plugin-react": "^3.0.1",
+		"typescript": "^4.9.4",
+		"vite": "^4.0.4"
+	}
 }
