fix(typescript): updated plugin version to latest free

--- a/typescript/app1/tsconfig.json
+++ b/typescript/app1/tsconfig.json
@@ -2,6 +2,9 @@
   "compilerOptions": {
     "sourceMap": true,
     "strict": true,
+    "paths": {
+      "*": ["./@mf-types/*"]
+    },
     "jsx": "react"
   },
   "include": ["src/**/*"]
