--- a/typescript/app2/tsconfig.json
+++ b/typescript/app2/tsconfig.json
@@ -2,6 +2,10 @@
   "compilerOptions": {
     "sourceMap": true,
     "strict": true,
+    "baseUrl": ".",
+    "paths": {
+      "*": ["./@mf-types/*"]
+    },
     "jsx": "react"
   },
   "include": ["src/**/*"]
