--- a/typescript/app2/package.json
+++ b/typescript/app2/package.json
@@ -13,7 +13,7 @@
     "serve": "13.0.4",
     "typescript": "4.3.5",
     "webpack": "5.72.1",
-    "webpack-cli": "4.10.0",
+    "webpack-cli": "5.0.1",
     "webpack-dev-server": "4.9.3"
   },
   "scripts": {
@@ -23,7 +23,7 @@
     "clean": "rm -rf dist"
   },
   "dependencies": {
-    "@module-federation/typescript": "^0.1.8",
+    "@module-federation/typescript": "2.1.4",
     "react": "^16.13.0",
     "react-dom": "^16.13.0"
   }
