--- a/multi-build-system/vite-plugin-federation/webpack-to-vite/vite-host/package.json
+++ b/multi-build-system/vite-plugin-federation/webpack-to-vite/vite-host/package.json
@@ -7,7 +7,7 @@
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview",
-    "start": "yarn build && yarn preview"
+    "start": "yarn build && yarn preview --port 5003"
   },
   "dependencies": {
     "react": "^18.2.0",
@@ -18,6 +18,7 @@
     "@types/react-dom": "^18.0.6",
     "@vitejs/plugin-react": "^3.0.0",
     "vite": "^4.0.3",
-    "@originjs/vite-plugin-federation": "^1.1.13"
+    "@originjs/vite-plugin-federation": "^1.1.13",
+    "typescript": "^4.9.4"
   }
 }
