fix CI comments

--- a/multi-build-system/vite-plugin-federation/vite-to-webpack/vite-remote/package.json
+++ b/multi-build-system/vite-plugin-federation/vite-to-webpack/vite-remote/package.json
@@ -6,7 +6,7 @@
 	"scripts": {
 		"dev": "vite --port 5001",
 		"build": "tsc && vite build",
-		"preview": "yarn build && vite preview --port 5001"
+		"start": "yarn build && vite preview --port 5001"
 	},
 	"dependencies": {
 		"react": "^18.2.0",
