--- a/angular-universal-ssr/package.json
+++ b/angular-universal-ssr/package.json
@@ -2,9 +2,9 @@
   "name": "angular-universal-ssr",
   "scripts": {
     "start": "yarn build && yarn serve",
-    "build": "lerna run --scope=angular-universal-ssr_* build:federation",
-    "serve": "lerna run --scope=angular-universal-ssr_* --parallel serve:federation",
-    "clean": "lerna run --scope=angular-universal-ssr_* --parallel clean"
+    "build": "npx lerna run --scope=angular-universal-ssr_* build:federation",
+    "serve": "npx lerna run --scope=angular-universal-ssr_* --parallel serve:federation",
+    "clean": "npx lerna run --scope=angular-universal-ssr_* --parallel clean"
   },
   "devDependencies": {
     "lerna": "3.22.1"
