--- a/comprehensive-demo-react18/package.json
+++ b/comprehensive-demo-react18/package.json
@@ -1,10 +1,10 @@
 {
   "name": "comprehensive-demo-react18",
   "scripts": {
-    "start": "concurrently \"lerna run --scope=comprehensive-demo-react18_app* --parallel start\" \"yarn serve\"",
-    "build": "lerna run --scope=comprehensive-demo-react18_app* build",
-    "serve": "lerna run --scope=comprehensive-demo-react18_app* --parallel serve",
-    "clean": "lerna run --scope=comprehensive-demo-react18_app* --parallel clean",
+    "start": "concurrently \"npx lerna run --scope=comprehensive-demo-react18_app* --parallel start\" \"yarn serve\"",
+    "build": "npx lerna run --scope=comprehensive-demo-react18_app* build",
+    "serve": "npx lerna run --scope=comprehensive-demo-react18_app* --parallel serve",
+    "clean": "npx lerna run --scope=comprehensive-demo-react18_app* --parallel clean",
     "e2e:ci": "yarn start & wait-on http-get://localhost:3001/ && npx cypress run --config-file ../cypress/config/cypress.config.ts --config '{\"supportFile\": \"../cypress/support/e2e.ts\"}' --spec \"./e2e/runAll*.cy.ts\" --browser=chrome"
   },
   "devDependencies": {
