--- a/different-react-versions-isolated/package.json
+++ b/different-react-versions-isolated/package.json
@@ -1,10 +1,10 @@
 {
   "name": "different-react-versions-isolated",
   "scripts": {
-    "start": "lerna run --scope=different-react-versions-isolated_app* --parallel start",
-    "build": "lerna run --scope=different-react-versions-isolated_app* build",
-    "serve": "lerna run --scope=different-react-versions-isolated_app* --parallel serve",
-    "clean": "lerna run --scope=different-react-versions-isolated_app* --parallel clean",
+    "start": "npx lerna run --scope=different-react-versions-isolated_app* --parallel start",
+    "build": "npx lerna run --scope=different-react-versions-isolated_app* build",
+    "serve": "npx lerna run --scope=different-react-versions-isolated_app* --parallel serve",
+    "clean": "npx lerna run --scope=different-react-versions-isolated_app* --parallel clean",
     "e2e:ci": "yarn start & wait-on http-get://localhost:3001/ && npx cypress run --config-file ../cypress/config/cypress.config.ts --config '{\"supportFile\": \"../cypress/support/e2e.ts\"}' --spec \"./e2e/*.cy.ts\" --browser=chrome"
   },
   "devDependencies": {
