--- a/federated-npm/package.json
+++ b/federated-npm/package.json
@@ -8,10 +8,10 @@
     ]
   },
   "scripts": {
-    "start": "lerna run --parallel start",
-    "build": "lerna run build",
-    "serve": "lerna run --parallel serve",
-    "clean": "lerna run --parallel clean"
+    "start": "npx lerna run --parallel start",
+    "build": "npx lerna run build",
+    "serve": "npx lerna run --parallel serve",
+    "clean": "npx lerna run --parallel clean"
   },
   "devDependencies": {
     "lerna": "3.22.1"
