--- a/rust-wasm/package.json
+++ b/rust-wasm/package.json
@@ -4,7 +4,7 @@
   "main": "index.js",
   "license": "MIT",
   "scripts": {
-    "start": "lerna run start --scope=rust-wasm_* --stream",
+    "start": "npx lerna run start --scope=rust-wasm_* --stream",
     "e2e:ci": "yarn start & wait-on http-get://localhost:8080/ && npx cypress run --config-file ../cypress/config/cypress.config.ts --config '{\"supportFile\": \"../cypress/support/e2e.ts\"}' --spec \"./e2e/tests/runAll.cy.ts\" --browser=chrome"
   },
   "devDependencies": {
