--- a/typescript-project-references/package.json
+++ b/typescript-project-references/package.json
@@ -1,10 +1,10 @@
 {
   "name": "typescript-project-references",
   "scripts": {
-    "start": "lerna run --scope=typescript-project-references_app* --parallel start",
-    "build": "lerna run --scope=typescript-project-references_app* build",
-    "serve": "lerna run --scope=typescript-project-references_app* --parallel serve",
-    "clean": "lerna run --scope=typescript-project-references_app* --parallel clean",
+    "start": "npx lerna run --scope=typescript-project-references_app* --parallel start",
+    "build": "npx lerna run --scope=typescript-project-references_app* build",
+    "serve": "npx lerna run --scope=typescript-project-references_app* --parallel serve",
+    "clean": "npx lerna run --scope=typescript-project-references_app* --parallel clean",
     "e2e:ci": "yarn start & wait-on http-get://localhost:3001/ && npx cypress run --config-file ../cypress/config/cypress.config.ts --config '{\"supportFile\": \"../cypress/support/e2e.ts\"}' --spec \"./e2e/tests/*.cy.ts\" --browser=chrome"
   },
   "devDependencies": {
