--- a/typescript/package.json
+++ b/typescript/package.json
@@ -1,10 +1,10 @@
 {
   "private": true,
   "scripts": {
-    "start": "lerna run --scope @typescript/* --parallel start",
-    "build": "lerna run --scope @typescript/* build",
-    "serve": "lerna run --scope @typescript/* --parallel serve",
-    "clean": "lerna run --scope @typescript/* --parallel clean"
+    "start": "npx lerna run --scope @typescript/* --parallel start",
+    "build": "npx lerna run --scope @typescript/* build",
+    "serve": "npx lerna run --scope @typescript/* --parallel serve",
+    "clean": "npx lerna run --scope @typescript/* --parallel clean"
   },
   "devDependencies": {
     "lerna": "3.22.1"
