--- a/umd-federation/package.json
+++ b/umd-federation/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "lerna run --scope=umd-federation_app* --parallel start",
+    "start": "npx lerna run --scope=umd-federation_app* --parallel start",
     "e2e:ci": "yarn start & wait-on http-get://localhost:9001/ && npx cypress run --config-file ../cypress/config/cypress.config.ts --config '{\"supportFile\": \"../cypress/support/e2e.ts\"}' --spec \"./e2e/*.cy.ts\" --browser=chrome"
   },
   "keywords": [],
