refactor: CI cache creation

--- a/.github/workflows/on-push.yml
+++ b/.github/workflows/on-push.yml
@@ -1,8 +1,8 @@
 name: on push
-on:
-  push:
-    branches:
-      - master
+on: pull_request
+  # push:
+  #   branches:
+  #     - master
 
 jobs:
 
@@ -19,6 +19,8 @@ jobs:
   cache:
     runs-on: ubuntu-22.04
     needs: stop-previous-run
+    outputs:
+      yarnHash: ${{ steps.set-matrix.outputs.matrix }}
     steps:
       - name: Checkout
         uses: actions/checkout@v3
@@ -29,9 +31,10 @@ jobs:
 
       # Hash yarn.lock files to use it as a cache key, if yarn.lock files are changed, the cache will be invalidated
       - name: Check Yarn hash
+        id: yarn-hash
         run: |
-          npx hash-files -f '["**/yarn.lock"]' -a sha256 > YarnHash.txt
-          echo "Yarn hash is >> $(cat YarnHash.txt)"
+          yarnHash="$(npx hash-files -f '["**/yarn.lock"]' -a sha256)"
+          echo "yarnHash=$yarnHash" >> $GITHUB_OUTPUT
 
       - name: Cache Yarn and Cypress
         uses: actions/cache@v3
@@ -42,11 +45,10 @@ jobs:
             **/yarn.lock
             ~/.cache/Cypress
             ~/.cache/yarn/v6  
-          key: e2e-cache-${{ hashFiles('YarnHash.txt') }}
+          key: e2e-cache-${{ steps.yarn-hash.outputs.yarnHash }}
 
       - name: Install deps
         if: steps.yarn-cache.outputs.cache-hit != 'true'
         run: |
-          echo "CACHE CHANGED"
+          echo "Yarn changed - install deps ... "
           yarn install
-          npx lerna exec --stream --concurrency=1 "yarn install"
